2005-07-10  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * ksvg2/core/KCanvasRenderingStyle.cc: Added.
        * ksvg2/core/KCanvasRenderingStyle.h: Added.
        * ksvg2/core/KSVGDocumentBuilder.cc: Added.
        * ksvg2/core/KSVGDocumentBuilder.h: Added.
        * ksvg2/core/KSVGTimeScheduler.cc: Added.
        * ksvg2/core/KSVGTimeScheduler.h: Added.
        * ksvg2/core/KSVGTimeScheduler.moc: Added.
        Added directory previously ignored by global cvsignore rules.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3939

2005-07-10  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * WebCore.pbproj/project.pbxproj:
        added htmlfactory.* to WebCore+SVG
        Also fixed /sw/bin/bison absolute path.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3938

2005-07-09  Timothy Hatcher  <timothy@colloquy.info>

        Reviewed and landed by Maciej.

	Fixed a build error with GCC4 and the use of _M_type.

        * khtml/misc/hashtraits.h:
        Test for GCC4 and use the new __value enum from _M_type.

2005-07-09  David Hyatt  <hyatt@apple.com>

	Make sure to keep eLastEntry at the end of the list, since it is used for the dynamic portion of the
	hash.
	
        Reviewed by mjs

2005-07-09  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric Seidel.

        - removed unused files

        * kdom/impl/NodeKeeper.cc: Removed.
        * kdom/impl/NodeKeeper.h: Removed.
        * WebCore.pbproj/project.pbxproj: Remove from +SVG build.

2005-07-09  David Hyatt  <hyatt@apple.com>

	Fix for bugzilla bug 3405, replace NodeImpl::Id with a new class,
	QualifiedName, to represent tag names (for DOM elements and CSS
	selectors).
	
        Reviewed by mjs

        * WebCore.pbproj/project.pbxproj:
        * khtml/css/css_base.cpp:
        (CSSSelector::anyTagName):
        (CSSSelector::print):
        (CSSSelector::specificity):
        (CSSSelector::selectorText):
        * khtml/css/css_base.h: